--- a/index.html
+++ b/index.html
@@ -127,6 +127,58 @@
       </div>
     </section>
 
+    <section class="our-partners">
+      <div class="flex-col text-center">
+        <h2>Our partners</h2>
+        <div class="image-row">
+          <div class="partner-image">
+            <img src="huntleigh.jpg" alt="">
+          </div>
+          <div class="partner-image">
+            <img src="corpuls.png" alt="">
+          </div>
+          <div class="partner-image">
+            <img src="weinmann.png" alt="">
+          </div>
+          <div class="partner-image">
+            <img src="medima.png" alt="">
+          </div>
+        </div>
+        
+        <div class="image-row">
+          <div class="partner-image">
+            <img src="hum.png" alt="">
+          </div>
+          <div class="partner-image">
+            <img src="oxylitre.webp" alt="">
+          </div>
+          <div class="partner-image">
+            <img src="clarius.webp" alt="">
+          </div>
+          <div class="partner-image">
+            <img src="promeba.png" alt="">
+          </div>
+        </div>
+
+        <div class="image-row">
+          <div class="partner-image">
+            <img src="adroit.png" alt="">
+          </div>
+          <div class="partner-image">
+            <img src="likamed.png" alt="">
+          </div>
+          <div class="partner-image">
+            <img src="medikal.png" alt="">
+          </div>
+          <div class="partner-image">
+            <img src="ginevri.png" alt="">
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+
     <div class="footer">
       <div class="footer-left">
         <div class="flex-col">
