media queries started

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             The leading provider of emergency and diagnostic medical solutions
             in the UAE.
           </h1>
-          <div>
+          <div class="hero-buttons">
             <button class="hero-button">Browse Products</button>
             <button class="hero-button-2">Get a Quote</button>
           </div>
