--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,6 +40,10 @@
               <a href="#" title="Tours">Contact Us</a>
             </li>
           </ul>
+          <div>
+            <img class="menu" src="menu.png" alt="" />
+            <img class="menu-close" src="menu-close.png" alt="" />
+          </div>
           <form class="flex-form">
             <label for="from">
               <i class="ion-location"></i>
@@ -132,52 +142,50 @@
         <h2>Our partners</h2>
         <div class="image-row">
           <div class="partner-image">
-            <img src="huntleigh.jpg" alt="">
+            <img src="huntleigh.jpg" alt="" />
           </div>
           <div class="partner-image">
-            <img src="corpuls.png" alt="">
+            <img src="corpuls.png" alt="" />
           </div>
           <div class="partner-image">
-            <img src="weinmann.png" alt="">
+            <img src="weinmann.png" alt="" />
           </div>
           <div class="partner-image">
-            <img src="medima.png" alt="">
-          </div>
-        </div>
-        
-        <div class="image-row">
-          <div class="partner-image">
-            <img src="hum.png" alt="">
-          </div>
-          <div class="partner-image">
-            <img src="oxylitre.webp" alt="">
-          </div>
-          <div class="partner-image">
-            <img src="clarius.webp" alt="">
-          </div>
-          <div class="partner-image">
-            <img src="promeba.png" alt="">
+            <img src="medima.png" alt="" />
           </div>
         </div>
 
         <div class="image-row">
           <div class="partner-image">
-            <img src="adroit.png" alt="">
+            <img src="hum.png" alt="" />
           </div>
           <div class="partner-image">
-            <img src="likamed.png" alt="">
+            <img src="oxylitre.webp" alt="" />
           </div>
           <div class="partner-image">
-            <img src="medikal.png" alt="">
+            <img src="clarius.webp" alt="" />
           </div>
           <div class="partner-image">
-            <img src="ginevri.png" alt="">
+            <img src="promeba.png" alt="" />
           </div>
         </div>
 
+        <div class="image-row">
+          <div class="partner-image">
+            <img src="adroit.png" alt="" />
+          </div>
+          <div class="partner-image">
+            <img src="likamed.png" alt="" />
+          </div>
+          <div class="partner-image">
+            <img src="medikal.png" alt="" />
+          </div>
+          <div class="partner-image">
+            <img src="ginevri.png" alt="" />
+          </div>
+        </div>
       </div>
     </section>
-
 
     <div class="footer">
       <div class="footer-left">
@@ -199,8 +207,7 @@
           </div>
           <div class="footer-col">
             <form class="footer-form">
-              <label for="footer-from">
-              </label>
+              <label for="footer-from"> </label>
               <input type="search" placeholder="search..." />
               <input type="submit" value="Search" />
             </form>
@@ -220,16 +227,19 @@
               <p><i class="fab fa-facebook-square facebook"></i>Meadmedical</p>
             </div>
           </div>
-          <hr>
-          <p>Tel: +971 4 446 2065 Fax: +971 4 446 2099<br> info@meadmedical.net</p><hr>
+          <hr />
           <p>
-            <span>Dubai Office</span> <br>
-            Business Bay, Empire Heights Tower B Dubai, United Arab
-            Emirates
+            Tel: +971 4 446 2065 Fax: +971 4 446 2099<br />
+            info@meadmedical.net
+          </p>
+          <hr />
+          <p>
+            <span>Dubai Office</span> <br />
+            Business Bay, Empire Heights Tower B Dubai, United Arab Emirates
           </p>
           <p>
-            <span>Abu Dhabi </span> <br>Mussafah Sanaya, 15th Street Abu Dhabi, United Arab
-            Emirates
+            <span>Abu Dhabi </span> <br />Mussafah Sanaya, 15th Street Abu
+            Dhabi, United Arab Emirates
           </p>
         </div>
       </div>
@@ -286,10 +296,20 @@
     </section> -->
     <div class="footer"></div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <script>
+      let menuList = document.querySelector("ul");
+
+      document.querySelector(".menu").onclick = function () {
+        document.querySelector(".menu").style.display = "none";
+        document.querySelector(".menu-close").style.display = "block";
+        menuList.style.height = "20%";
+      };
+
+      document.querySelector(".menu-close").onclick = function () {
+        document.querySelector(".menu-close").style.display = "none";
+        document.querySelector(".menu").style.display = "block";
+        menuList.style.height = "0";
+      };
+    </script>
   </body>
 </html>
