--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    /> -->
+   
     <link rel="stylesheet" href="style.css" />
     <title>MEAD Medical</title>
   </head>
@@ -24,7 +19,7 @@
     <!-- Header -->
     <header>
       <div class="flex-row">
-        <img class="logo" src="mead-logo.webp" alt="" />
+        <img class="logo" src="images/mead-logo.webp" alt="" />
         <nav>
           <ul>
             <li>
@@ -41,8 +36,8 @@
             </li>
           </ul>
           <div>
-            <img class="menu" src="menu.png" alt="" />
-            <img class="menu-close" src="menu-close.png" alt="" />
+            <img class="menu" src="images/menu.png" alt="" />
+            <img class="menu-close" src="images/menu-close.png" alt="" />
           </div>
           <form class="flex-form">
             <label for="from">
@@ -71,16 +66,16 @@
 
         <div class="hero-col-2-right">
           <div class="hero-col-2-right-image-holder">
-            <img class="" src="microscope.jpeg" />
-            <img class="" src="light.jpeg" />
+            <img class="" src="images/microscope.jpeg" />
+            <img class="" src="images/light.jpeg" />
           </div>
           <div class="hero-col-2-right-image-holder">
-            <img class="" src="stethoscope3.jpeg" />
-            <img class="" src="cruches.jpeg" />
+            <img class="" src="images/stethoscope3.jpeg" />
+            <img class="" src="images/cruches.jpeg" />
           </div>
           <div class="hero-col-2-right-image-holder">
-            <img class="" src="stethoscope.webp" />
-            <img class="" src="wheelchair.png" />
+            <img class="" src="images/stethoscope.webp" />
+            <img class="" src="images/wheelchair.png" />
           </div>
         </div>
       </div>
@@ -96,22 +91,22 @@
       </div>
       <div class="flex-row">
         <div class="card">
-          <img src="emergency.png" />
+          <img src="images/emergency.png" />
           <p class="card-text">Emergency</p>
         </div>
 
         <div class="card">
-          <img src="critical-care.png" />
+          <img src="images/critical-care.png" />
           <p class="card-text">Critical care</p>
         </div>
 
         <div class="card">
-          <img src="diagnostics.png" />
+          <img src="images/diagnostics.png" />
           <p class="card-text">Diagnostic</p>
         </div>
 
         <div class="card">
-          <img src="consumables.png" />
+          <img src="images/consumables.png" />
           <p class="card-text">Consumables</p>
         </div>
       </div>
@@ -142,47 +137,91 @@
         <h2>Our partners</h2>
         <div class="image-row">
           <div class="partner-image">
-            <img src="huntleigh.jpg" alt="" />
+            <img src="images/huntleigh.png" alt="" />
           </div>
           <div class="partner-image">
-            <img src="corpuls.png" alt="" />
+            <img src="images/corpuls.png" alt="" />
           </div>
           <div class="partner-image">
-            <img src="weinmann.png" alt="" />
+            <img src="images/weinmann.png" alt="" />
           </div>
           <div class="partner-image">
-            <img src="medima.png" alt="" />
+            <img src="images/medima.png" alt="" />
           </div>
         </div>
 
         <div class="image-row">
           <div class="partner-image">
-            <img src="hum.png" alt="" />
+            <img src="images/hum.png" alt="" />
           </div>
           <div class="partner-image">
-            <img src="oxylitre.webp" alt="" />
+            <img src="images/oxyliter.png" alt="" />
           </div>
           <div class="partner-image">
-            <img src="clarius.webp" alt="" />
+            <img src="images/clarius.webp" alt="" />
           </div>
           <div class="partner-image">
-            <img src="promeba.png" alt="" />
+            <img src="images/promeba.png" alt="" />
           </div>
         </div>
 
         <div class="image-row">
           <div class="partner-image">
-            <img src="adroit.png" alt="" />
+            <img src="images/adroit.png" alt="" />
           </div>
           <div class="partner-image">
-            <img src="likamed.png" alt="" />
+            <img src="images/likamed.png" alt="" />
           </div>
           <div class="partner-image">
-            <img src="medikal.png" alt="" />
+            <img src="images/medikal.png" alt="" />
           </div>
           <div class="partner-image">
-            <img src="ginevri.png" alt="" />
+            <img src="images/ginevri.png" alt="" />
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact-us">
+      <div class="form-container">
+        <div class="form-featured">
+          <div class="form-circle"></div>
+          <img src="images/microscope2.png" class="form-product" />
+        </div>
+        <div class="form-content">
+          <h2>Reach Out To Us</h2>
+          <p>Contact us and we will get back to you as soon as posibble.</p>
+
+          <label for="name">Name:</label>
+          <input name="name" type="text" required />
+
+          <label for="email">Email:</label>
+          <input
+            name="email"
+            type="email"
+            placeholder="example@example.com"
+            required
+          />
+
+          <label for="number">Phone number:</label>
+          <input name="number" type="tel" placeholder="123-4567-890" required />
+
+          <label for="categories">Select message category:</label>
+          <select name="" id="">
+            <option value="">Categories...</option>
+            <option value="">Emmergency</option>
+            <option value="">Critical care</option>
+            <option value="">Diagnostic</option>
+            <option value="">Consumables</option>
+          </select>
+
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+
+          <div class="form-item">
+            <button type="submit" class="send-button">Send</button>
+          </div>
+
+          
         </div>
       </div>
     </section>
@@ -207,7 +246,7 @@
           </div>
           <div class="footer-col">
             <form class="footer-form">
-              <label for="footer-from"> </label>
+              <label for="footer-form"> </label>
               <input type="search" placeholder="search..." />
               <input type="submit" value="Search" />
             </form>
@@ -244,57 +283,6 @@
         </div>
       </div>
     </div>
-
-    <!-- <section class="contact-us">
-      <div class="form-container">
-        <div class="form-featured">
-          <div class="form-circle"></div>
-          <img src="microscope2.png" class="form-product" />
-        </div>
-        <div class="form-content">
-          <h2>Reach Out To Us</h2>
-          <p class="lead">
-            Contact us and we will get back to you as soon as posibble
-          </p>
-          <form>
-            <ul class="form-list">
-              <li class="form-list__row">
-                <label>Name</label>
-                <input type="text" name="" required="" />
-              </li>
-              <li class="form-list__row">
-                <label>Email</label>
-                <input
-                  type="text"
-                  placeholder="example@example.com"
-                  required=""
-                />
-              </li>
-              <li class="form-list__row">
-                <label>Phone Number</label>
-                <input type="tel" placeholder="123-4567-890" required />
-              </li>
-
-              <li class="form-list__row">
-                <label>Please select a subject</label>
-                <select required="">
-                  <option value="">Laboratory</option>
-                  <option value="">Ward</option>
-                  <option value="">Supply</option>
-                </select>
-              </li>
-              <li>
-                <textarea></textarea>
-              </li>
-              <li>
-                <button type="submit" class="button">Send</button>
-              </li>
-            </ul>
-          </form>
-        </div>
-      </div>
-    </section> -->
-    <div class="footer"></div>
 
     <script>
       let menuList = document.querySelector("ul");
