scroll behaviour updated

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         <nav>
           <ul>
             <li>
-              <a href="#" title="Hotels">Home</a>
+              <a href="#">Home</a>
             </li>
             <li>
-              <a href="#" title="Flights">About Us</a>
+              <a href="#about-us">About Us</a>
             </li>
             <li>
-              <a href="#" title="Tours">Our Products</a>
+              <a href="#products">Our Products</a>
             </li>
             <li>
-              <a href="#" title="Tours">Contact Us</a>
+              <a href="#contact-us" title="Tours">Contact Us</a>
             </li>
           </ul>
           <div>
@@ -81,7 +81,7 @@
       </div>
     </section>
 
-    <section class="products">
+    <section id="products" class="products">
       <div class="flex-col">
         <h2>Our Products</h2>
         <p>
@@ -112,7 +112,7 @@
       </div>
     </section>
 
-    <section class="who-we-are">
+    <section id="about-us" class="who-we-are">
       <div class="flex-col text-center">
         <h2>Who we are</h2>
         <p>
@@ -182,7 +182,7 @@
       </div>
     </section>
 
-    <section class="contact-us">
+    <section id="contact-us" class="contact-us">
       <div class="form-container">
         <div class="form-featured">
           <div class="form-circle"></div>
